2022-09-11 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.h, configure.ac, getopt.c, getopt1.c: only include
	  the local replacement getopt header file if the system doesn't
	  support getopt_long_only.  Previously it was being included even
	  if it wasn't required.

	* getopt.h: rename to my_getopt.h.

2022-09-10 Roy Hills <Roy.Hills@hotmail.com>

	* acinclude.m4: Replaced obsolete autoconf macros AC_TRY_COMPILE with
	  AC_COMPILE_IFELSE and AC_TRY_LINK with AC_LINK_IFELSE. These macros
	  were obsoleted in autoconf 2.70.

	* strlcat.h: included this new file that was missed out of the previous
	  commit.

2022-09-09 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Die with error message if hsearch() fails when adding a
	  new entry to the hash table. Previous behaviour was to issue a
	  warning and continue.

	* mt19937ar.c, mt19937ar.h, Makefile.am, arp-scan.h: Update Mersenne Twister
	  random number generator source code to latest version from
	  https://github.com/clibs/mt19937ar

	* strlcat.c, strlcpy.c: Updated from latest OpenBSD source.

	* strlcat.h: New file containing function prototypes for strlcat() and strlcpy().

2022-09-03 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Allow MAC addresses in mac-vendor.txt to use either lower
	  or uppercase hex digits and ignore any seperator characters e.g. ":"
	  or "-". This allows normal format MAC addresses such as those output
	  by arp-scan to be used directly in the mac-vendor.txt file.

	* mac-vendor.txt: Update comments to reflect code changes.

2022-06-16 Roy Hills <Roy.Hills@hotmail.com>

	* get-iab: change IEEE IAB URL to
	  http://standards-oui.ieee.org/iab/iab.txt. Thanks to silex for the
	  pull request.

	* Updated ieee-oui.txt and ieee-iab.txt files.

2021-12-12 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.c: Limit packet length in callback() to prevent potential
	  buffer overrun in unmarshal_arp_pkt() if network frames larger