@@ -1,20 +1,0 @@
-language: c
-compiler:
-  - gcc
-  - clang
-env:
-  - GCOV_OPT="--enable-gcov"
-  - GCOV_OPT="--disable-gcov"
-# gcov code coverage only works with gcc, so don't run it with clang.
-matrix:
-  exclude:
-    - compiler: clang
-      env: GCOV_OPT="--enable-gcov"
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libpcap0.8-dev
-  - sudo pip install cpp-coveralls
-script:
-  - autoreconf --install && ./configure $GCOV_OPT && make && make check
-after_success:
-  - if [ $GCOV_OPT == "--enable-gcov" ]; then coveralls ; fi
